--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "django-cloudrun-iap"
-version = "0.2.6-beta"
+version = "0.2.7"
 authors = [
     { name = "Simon ANDRE", email = "simon.andre@emencia.com" },
 ]
@@ -26,7 +26,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
 ]
 dependencies = [
-    "django>=3.2",
+    "django~=3.2",
     "google-auth>=2.0.0",
 ]
 
