--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = cloudrun_iap_auth.tests.test_settings
+DJANGO_SETTINGS_MODULE = django_cloudrun_iap.tests.test_settings
 python_files = tests.py test_*.py *_test.py
 addopts = --nomigrations
