--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "django-cloudrun-iap"
-version = "0.2.9-4"
+version = "0.2.9-5"
 authors = [
     { name = "Simon ANDRE", email = "simon.andre@emencia.com" },
 ]
@@ -35,6 +35,9 @@ test = [
     "pytest>=7.0",
     "pytest-django>=4.5",
     "pytest-mock>=3.0",
+]
+dev = [
+    "ipdb",
 ]
 
 [project.urls]
